k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: password-advisor
spec:
  selector:
    app: frontend
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
