k8s/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: password-advisor
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
